remove custom zshrc template test

--- a/tasks/custom-zshrc.yml
+++ b/tasks/custom-zshrc.yml
@@ -1,14 +1,14 @@
 - name: Customize .zshrc for {{ ansible_user }}
   template:
     src: zshrc.j2
-    dest: "{{ ansible_env.HOME }}/zshrc-test"
+    dest: "{{ ansible_env.HOME }}/.zshrc"
     backup: yes
     owner: '{{ ansible_user }}'
 
 - name: Add custom entries into .zshrc
   lineinfile:
     line: "{{ item }}"
-    dest: "{{ ansible_env.HOME }}/zshrc-test"
+    dest: "{{ ansible_env.HOME }}/.zshrc"
   when: oh_my_zsh_custom_zsh_entries is defined
   with_items:
     - "{{ oh_my_zsh_custom_zsh_entries }}"
