--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 language: python
 python: "2.7"
-sudo: false
+sudo: required
 # Install ansible
 addons:
   apt:
@@ -18,6 +18,8 @@ install:
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  # Run the role/playbook with ansible-playbook.
+  - "ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
