--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,6 +8,18 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - all
+    - name: Debian
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
+    - name: Alpine
+      versions:
+        - all
+    - name: Archlinux
+      versions:
+        - all
   galaxy_tags:
     - ohmyzsh
     - zsh
