--- a/tasks/install-plugins.yml
+++ b/tasks/install-plugins.yml
@@ -1,3 +1,7 @@
+---
+##################################
+# Install oh-my-zsh plugins
+##################################
 - name: Create custom plugin directory
   file:
     path: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/plugins-custom"
