--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,4 +1,7 @@
 ---
+##################################
+# Install ZSH and oh-my-zsh
+##################################
 - name: Install zsh
   package: name=zsh state=present
   register: installation
@@ -12,7 +15,7 @@
 - block:
    - name: Download oh-my-zsh Installer
      get_url:
-       url: https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh
+       url: "{{ oh_my_zsh_url }}"
        dest: /tmp/zsh-installer.sh
 
    - name: Install oh-my-zsh
